# IABootCamp

./: .gitignore  Bot.cpp  CMakeLists.txt  ChangeLog.txt  README.md  jobfiles.txt
LocalMatchResults/gamelog/: GameReplay.js
MyBotLogic/: Agent.cpp  Agent.h  ComputeNode.h  Connector.cpp  Connector.h  Context.cpp  Context.h  GameManager.cpp  GameManager.h  Graph.cpp  Graph.h  MoveState.cpp  MoveState.h  MyBotLogic.cpp  MyBotLogic.h  Node.cpp  Node.h  State.h  Utility.h  WaitState.cpp  WaitState.h
MyBotLogic/BehaviourTree/: Composite.cpp  Composite.h  Conditions.cpp  Discover.cpp  FindObjective.cpp  GoalTree.cpp  GoalTree.h  Selector.cpp  Sequence.cpp  Task.h
MyBotLogic/State/: MoveState.cpp  MoveState.h  WaitState.cpp  WaitState.h
